Bug 433087 - Close button on tabs looks cut off p=bielawski1@gmail.com, r=me

--- a/mail/themes/qute/mail/tabmail.css
+++ b/mail/themes/qute/mail/tabmail.css
@@ -217,7 +217,7 @@ tabpanels {
 
 .tab-close-button {
   -moz-appearance: none;
-  -moz-image-region: rect(0px, 64px, 16px, 48px);
+  -moz-image-region: rect(0px, 56px, 14px, 42px);
   height: 24px;
   border: none !important;
   padding: 0px;
@@ -236,13 +236,13 @@ tabpanels {
 
 .tab-close-button:hover,
 .tabmail-tab[selected="true"] > .tab-close-button:hover {
-  -moz-image-region: rect(0px, 32px, 16px, 16px);
+  -moz-image-region: rect(0px, 28px, 14px, 14px);
   opacity: 1.0;
 }
 
 .tab-close-button:hover:active,
 .tabmail-tab[selected="true"] > .tab-close-button:hover:active {
-  -moz-image-region: rect(0px, 48px, 16px, 32px);
+  -moz-image-region: rect(0px, 42px, 14px, 28px);
   opacity: 1.0;
 }
 
@@ -257,7 +257,7 @@ tabpanels {
 
 .tabmail-tab[selected="true"] > .tab-close-button {
   background-image: url("chrome://messenger/skin/icons/tab-middle.png");
-  -moz-image-region: rect(0px, 16px, 16px, 0px);
+  -moz-image-region: rect(0px, 14px, 14px, 0px);
   /* Make this button focusable so clicking on it will not focus the tab while
      it's getting closed */
   -moz-user-focus: normal;
